[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvoy-guard"
version = "0.1.0"
description = "Runtime guardrails enforcement for AI agents — reads agent.guard.yml and enforces limits at runtime"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Chinmay Murugkar", email = "cthecm@gmail.com" }]
requires-python = ">=3.9"
keywords = ["ai", "agents", "guardrails", "llm", "security", "agentvoy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://agentvoy.com"
Repository = "https://github.com/agentvoy/guard"
Issues = "https://github.com/agentvoy/guard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentvoy_guard*"]
